--- a/src/css/reservation-form/StepFive.css
+++ b/src/css/reservation-form/StepFive.css
@@ -45,10 +45,11 @@
     border-radius: 6px; }
 
   .step-five__step-five-form {
-    grid-template-columns: 1fr 1fr; }
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1rem; }
 
   .step-five__additional-info {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1rem; } }
+    grid-column-gap: 1rem; } }
 
 /*# sourceMappingURL=StepFive.css.map */
