--- a/src/css/reservation-form/StepFour.css
+++ b/src/css/reservation-form/StepFour.css
@@ -16,8 +16,8 @@
   font-size: var(--font-2-6); }
 
 .step-four__step-four-form {
-  display: flex;
-  flex-direction: column; }
+  display: grid;
+  grid-template-columns: 1fr; }
 
 .step-four__pickup-container {
   width: 100%;
@@ -39,12 +39,7 @@
     border-radius: 6px; }
 
   .step-four__step-four-form {
-    flex-direction: row; }
-
-  .step-four__pickup-container {
-    width: 50%; }
-
-  .step-four__dropoff-container {
-    width: 50%; } }
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1rem; } }
 
 /*# sourceMappingURL=StepFour.css.map */
