--- a/src/css/reservation-form/StepFour.scss
+++ b/src/css/reservation-form/StepFour.scss
@@ -20,8 +20,8 @@
 }
 
 .step-four__step-four-form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 .step-four__pickup-container {
@@ -48,14 +48,15 @@
     }
     
     .step-four__step-four-form {
-        flex-direction: row;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 1rem;
     }
 
     .step-four__pickup-container {
-        width: 50%;
+        // width: 50%;
     }
 
     .step-four__dropoff-container {
-        width: 50%;
+        // width: 50%;
     }
 }
