--- a/src/css/reservation-form/StepThree.css
+++ b/src/css/reservation-form/StepThree.css
@@ -17,7 +17,7 @@
 .step-three__reservation-date-picker-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 1rem;
+  grid-column-gap: 1rem;
   grid-template-areas: 'date-left date-right' 'time-left time-right' 'submit-left submit-right'; }
 
 .reservation-date-picker-container__reservation-date-picker {
