--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -22,7 +22,7 @@
     // width: 50%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 1rem;
+    grid-column-gap: 1rem;
     grid-template-areas:
     'date-left date-right'
     'time-left time-right'
