--- a/src/css/main.css
+++ b/src/css/main.css
@@ -675,15 +675,10 @@ html {
 
 .step-three__reservation-date-picker-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 1rem;
-  grid-template-areas: 'date-left date-right' 'time-left time-right' 'submit-left submit-right'; }
-
-.reservation-date-picker-container__reservation-date-picker {
-  grid-area: date-left; }
+  grid-template-columns: 1fr;
+  grid-row-gap: 2rem; }
 
 .reservation-date-picker-container__reservation-time-picker {
-  grid-area: time-left;
   display: grid;
   grid-template-columns: 4fr 1fr 4fr;
   align-items: center;
@@ -691,19 +686,38 @@ html {
   font-size: var(--font-1-6); }
 
 .reservation-date-picker-container__reservation-am-pm-picker {
-  grid-area: time-right;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: 'left right';
   font-size: 2.5rem; }
-
-.reservation-form__submit-btn--step-three {
-  grid-area: submit-right; }
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-three {
     flex-direction: row;
-    border-radius: 6px; } }
+    border-radius: 6px; }
+
+  .step-three__reservation-date-picker-container {
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1rem;
+    grid-template-areas: 'date-left date-right' 'time-left time-right' 'submit-left submit-right'; }
+
+  .reservation-date-picker-container__reservation-date-picker {
+    grid-area: date-left; }
+
+  .reservation-date-picker-container__reservation-time-picker {
+    grid-area: time-left; }
+
+  .reservation-date-picker-container__reservation-am-pm-picker {
+    grid-area: time-right; }
+
+  .reservation-date-picker-container__am-container {
+    grid-area: left; }
+
+  .reservation-date-picker-container__pm-container {
+    grid-area: left; }
+
+  .reservation-form__submit-btn--step-three {
+    grid-area: submit-right; } }
 .reservation-form__step-four {
   display: flex;
   flex-direction: column; }
