--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -55,10 +55,24 @@
     // justify-content: space-evenly;
     // align-items: center;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 'left right';
+    grid-template-columns: 4fr 1fr 4fr;
+    grid-template-areas: 'left middle right';
     font-size: 2.5rem;
 }
+
+.reservation-am-pm-picker__inner-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+// .reservation-date-picker-container__am-container {
+//     grid-area: left;
+// }
+
+// .reservation-date-picker-container__pm-container {
+//     grid-area: left;
+// }
 
 .reservation-form__submit-btn--step-three {
     // grid-area: submit-right;
@@ -89,14 +103,11 @@
     
     .reservation-date-picker-container__reservation-am-pm-picker {
         grid-area: time-right;
+        grid-template-columns: 1fr;
     }
 
-    .reservation-date-picker-container__am-container {
-        grid-area: left;
-    }
-
-    .reservation-date-picker-container__pm-container {
-        grid-area: left;
+    .reservation-am-pm-picker__inner-container {
+        justify-content: space-evenly;
     }
     
     .reservation-form__submit-btn--step-three {
