--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,6 +5,7 @@
 @import 'pages/AboutUs';
 @import 'pages/Reservation';
 @import 'pages/ContactUs';
+@import 'reservation-form/ReservationFormShared';
 @import 'reservation-form/StepOne';
 @import 'reservation-form/StepTwo';
 @import 'reservation-form/StepThree';
