--- a/src/css/components/Footer.css
+++ b/src/css/components/Footer.css
@@ -11,13 +11,14 @@
   --color-black: #000000;
   --color-input-border: #D1D1D1;
   --color-input-background: #F6F6F6;
+  --color-input-label: #535353;
   --font-16: 16px;
   --font-22: 22px;
   --font-26: 26px;
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: 1-3rem;
+  --font-1-3: 1.3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
@@ -26,20 +27,16 @@
   --font-3-2: 3.2rem;
   --font-4-4: 4.4rem;
   --line-120: 120%;
-  --line-150: 150%;
-}
+  --line-150: 150%; }
 
 html {
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 .mb-16 {
-  margin-bottom: 16px;
-}
+  margin-bottom: 16px; }
 
 .mb-45 {
-  margin-bottom: 45px;
-}
+  margin-bottom: 45px; }
 
 .footer {
   display: grid;
@@ -48,67 +45,53 @@ html {
   background-color: var(--color-footer);
   padding: 16px;
   color: var(--color-white);
-  font-size: 1.3rem;
-}
+  font-size: 1.3rem; }
 
 .footer__content {
   display: grid;
-  max-width: 1440px;
-}
+  max-width: 1440px; }
 
 .footer-logos {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
 
 .footer__payment-logo-container {
   width: 80px;
-  margin: 8px 35px;
-}
+  margin: 8px 35px; }
 
 .footer-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  line-height: var(--line-120);
-}
+  line-height: var(--line-120); }
 
 .footer-info__desktop {
-  display: none;
-}
+  display: none; }
 
 .footer-info__terms {
-  margin-top: 16px;
-}
+  margin-top: 16px; }
 
 @media only screen and (min-width: 768px) {
   .footer {
-    padding: 30px 0;
-  }
+    padding: 30px 0; }
 
   .footer__content {
     width: 80%;
     max-width: 1280px;
-    grid-template-columns: 4fr 1fr;
-  }
+    grid-template-columns: 4fr 1fr; }
 
   .footer-info__mobile {
-    display: none;
-  }
+    display: none; }
 
   .footer-info__desktop {
-    display: block;
-  }
+    display: block; }
 
   .footer-info {
-    grid-column: 1/2;
-    grid-row: 1/2;
-  }
+    grid-column: 1 / 2;
+    grid-row: 1 / 2; }
 
   .footer-logos {
-    grid-column: 2/3;
-  }
-}
+    grid-column: 2 / 3; } }
 
 /*# sourceMappingURL=Footer.css.map */
