--- a/src/css/main.css
+++ b/src/css/main.css
@@ -185,13 +185,14 @@ body, p {
   --color-black: #000000;
   --color-input-border: #D1D1D1;
   --color-input-background: #F6F6F6;
+  --color-input-label: #535353;
   --font-16: 16px;
   --font-22: 22px;
   --font-26: 26px;
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: -2rem;
+  --font-1-3: 1.3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
@@ -308,13 +309,14 @@ html {
   --color-black: #000000;
   --color-input-border: #D1D1D1;
   --color-input-background: #F6F6F6;
+  --color-input-label: #535353;
   --font-16: 16px;
   --font-22: 22px;
   --font-26: 26px;
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: -2rem;
+  --font-1-3: 1.3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
@@ -530,6 +532,11 @@ html {
 
   .contact-form-group__textarea {
     height: 100%; } }
+.reservation-form__input-label {
+  font-size: var(--font-1-3);
+  color: var(--color-input-label);
+  margin-bottom: 1rem; }
+
 .reservation-form__step-one {
   display: grid;
   grid-template-columns: 1fr;
@@ -733,7 +740,8 @@ html {
 
 .step-four__step-four-header {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-bottom: 2rem; }
 
 .step-four__header-text {
   font-size: var(--font-2-6); }
@@ -763,7 +771,7 @@ html {
 
   .step-four__step-four-form {
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1rem; } }
+    grid-column-gap: 1.5rem; } }
 .reservation-form__step-five {
   display: flex;
   flex-direction: column; }
@@ -846,7 +854,7 @@ html {
   line-height: var(--line-150); }
 
 .step-six-line-container__step-six-line-title {
-  color: #535353; }
+  color: var(--color-input-label); }
 
 .step-six-line-container__step-six-line-content {
   font-weight: bold; }
@@ -855,7 +863,7 @@ html {
   font-size: var(--font-1-6); }
 
 .step-six-comments-container__title {
-  color: #535353; }
+  color: var(--color-input-label); }
 
 .step-six__step-six-footer {
   display: flex;
@@ -903,13 +911,14 @@ html {
   --color-black: #000000;
   --color-input-border: #D1D1D1;
   --color-input-background: #F6F6F6;
+  --color-input-label: #535353;
   --font-16: 16px;
   --font-22: 22px;
   --font-26: 26px;
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: -2rem;
+  --font-1-3: 1.3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
@@ -1091,13 +1100,14 @@ html {
   --color-black: #000000;
   --color-input-border: #D1D1D1;
   --color-input-background: #F6F6F6;
+  --color-input-label: #535353;
   --font-16: 16px;
   --font-22: 22px;
   --font-26: 26px;
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: -2rem;
+  --font-1-3: 1.3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
