--- a/src/css/placeholders.scss
+++ b/src/css/placeholders.scss
@@ -13,6 +13,7 @@
     --color-black: #000000;
     --color-input-border: #D1D1D1;
     --color-input-background: #F6F6F6;
+    --color-input-label: #535353;
     // Font sizes
     --font-16: 16px;
     --font-22: 22px;
@@ -20,7 +21,7 @@
     --font-32: 32px;
     --font-44: 44px;
     --font-1: 1rem;
-    --font-1-3: 1-3rem;
+    --font-1-3: 1.3rem;
     --font-1-6: 1.6rem;
     --font-1-8: 1.8rem;
     --font-2: 2rem;
