--- a/src/css/reservation-form/StepFour.scss
+++ b/src/css/reservation-form/StepFour.scss
@@ -13,6 +13,7 @@
 .step-four__step-four-header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 2rem;
 }
 
 .step-four__header-text {
@@ -49,7 +50,7 @@
     
     .step-four__step-four-form {
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 1rem;
+        grid-column-gap: 1.5rem;
     }
 
     .step-four__pickup-container {
