--- a/src/css/reservation-form/StepSix.scss
+++ b/src/css/reservation-form/StepSix.scss
@@ -34,7 +34,7 @@
 }
 
 .step-six-line-container__step-six-line-title {
-    color: #535353;
+    color: var(--color-input-label);
 }
 
 .step-six-line-container__step-six-line-content {
@@ -46,7 +46,7 @@
 }
 
 .step-six-comments-container__title {
-    color: #535353;
+    color: var(--color-input-label);
 }
 
 .step-six__step-six-footer {
