--- a/src/css/main.css
+++ b/src/css/main.css
@@ -675,7 +675,8 @@ html {
 .step-three__step-header {
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  margin-bottom: 2rem; }
 
 .step-three__header {
   font-size: var(--font-2-6); }
@@ -710,7 +711,7 @@ html {
 
   .step-three__reservation-date-picker-container {
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1rem;
+    grid-column-gap: 1.5rem;
     grid-template-areas: 'date-left date-right' 'time-left time-right' 'submit-left submit-right'; }
 
   .reservation-date-picker-container__reservation-date-picker {
@@ -784,7 +785,8 @@ html {
 
 .step-five__step-five-header {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-bottom: 2rem; }
 
 .step-five__header-text {
   font-size: var(--font-2-6); }
@@ -807,7 +809,8 @@ html {
   display: grid; }
 
 .step-five__additional-info-form-group {
-  display: flex; }
+  display: flex;
+  align-items: center; }
 
 .step-five__step-five-footer {
   display: flex;
@@ -820,11 +823,11 @@ html {
 
   .step-five__step-five-form {
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1rem; }
+    grid-column-gap: 1.5rem; }
 
   .step-five__additional-info {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 1rem; } }
+    grid-column-gap: 1.5rem; } }
 .reservation-form__step-six {
   display: flex;
   flex-direction: column; }
@@ -837,7 +840,8 @@ html {
 
 .step-six__step-six-header {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-bottom: 2rem; }
 
 .step-six__header-text {
   font-size: var(--font-2-6); }
