--- a/src/css/reservation-form/StepFive.scss
+++ b/src/css/reservation-form/StepFive.scss
@@ -13,6 +13,7 @@
 .step-five__step-five-header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 2rem;
 }
 
 .step-five__header-text {
@@ -42,6 +43,7 @@
 
 .step-five__additional-info-form-group {
     display: flex;
+    align-items: center;
 }
 
 .step-five__step-five-footer {
@@ -57,11 +59,11 @@
     
     .step-five__step-five-form {
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 1rem;
+        grid-column-gap: 1.5rem;
     }
 
     .step-five__additional-info {
         grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap: 1rem;
+        grid-column-gap: 1.5rem;
     }
 }
