--- a/src/css/reservation-form/StepSix.scss
+++ b/src/css/reservation-form/StepSix.scss
@@ -13,6 +13,7 @@
 .step-six__step-six-header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 2rem;
 }
 
 .step-six__header-text {
