--- a/src/css/reservation-form/StepThree.css
+++ b/src/css/reservation-form/StepThree.css
@@ -9,7 +9,8 @@
 .step-three__step-header {
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  margin-bottom: 2rem; }
 
 .step-three__header {
   font-size: var(--font-2-6); }
@@ -44,7 +45,7 @@
 
   .step-three__reservation-date-picker-container {
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1rem;
+    grid-column-gap: 1.5rem;
     grid-template-areas: 'date-left date-right' 'time-left time-right' 'submit-left submit-right'; }
 
   .reservation-date-picker-container__reservation-date-picker {
