--- a/src/css/main.css
+++ b/src/css/main.css
@@ -273,6 +273,13 @@ html {
   font-size: var(--font-1-3);
   margin-top: 2rem; }
 
+.welcome-content-container__map-image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px; }
+
 @media only screen and (min-width: 1024px) {
   .home-content__welcome-container {
     width: 67%;
@@ -295,7 +302,12 @@ html {
     border-bottom-left-radius: 6px; }
 
   .welcome-content-container__map-container {
-    width: 50%; } }
+    width: 50%; }
+
+  .welcome-content-container__map-image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; } }
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
