--- a/src/css/pages/Home.css
+++ b/src/css/pages/Home.css
@@ -59,6 +59,13 @@
   font-size: var(--font-1-3);
   margin-top: 2rem; }
 
+.welcome-content-container__map-image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px; }
+
 @media only screen and (min-width: 1024px) {
   .home-content__welcome-container {
     width: 67%;
@@ -81,6 +88,11 @@
     border-bottom-left-radius: 6px; }
 
   .welcome-content-container__map-container {
-    width: 50%; } }
+    width: 50%; }
+
+  .welcome-content-container__map-image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; } }
 
 /*# sourceMappingURL=Home.css.map */
