Fix the bug when contact-form has rounded corners on the mobile form.

--- a/src/css/pages/ContactUs.css
+++ b/src/css/pages/ContactUs.css
@@ -87,7 +87,8 @@
     padding-bottom: 80px; }
 
   .contact-us__contact-form {
-    padding: 4rem; }
+    padding: 4rem;
+    border-radius: 6px; }
 
   .contact-form__contact-form-inside-wrapper {
     grid-template-columns: 1fr 1fr;
