--- a/src/css/pages/ContactUs.scss
+++ b/src/css/pages/ContactUs.scss
@@ -105,6 +105,7 @@
 
     .contact-us__contact-form {
         padding: 4rem;
+        border-radius: 6px;
     }
 
     .contact-form__contact-form-inside-wrapper {
