--- a/src/css/main.css
+++ b/src/css/main.css
@@ -273,6 +273,16 @@ html {
   font-size: var(--font-1-3);
   margin-top: 2rem; }
 
+.welcome-content-container__map-container {
+  position: relative; }
+
+.welcome-content-container__reservation-btn {
+  position: absolute;
+  bottom: 35px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%); }
+
 .welcome-content-container__map-image {
   height: 100%;
   width: 100%;
@@ -303,6 +313,9 @@ html {
 
   .welcome-content-container__map-container {
     width: 50%; }
+
+  .welcome-content-container__reservation-btn {
+    bottom: 50px; }
 
   .welcome-content-container__map-image {
     height: 100%;
