--- a/src/css/reservation-form/StepFive.css
+++ b/src/css/reservation-form/StepFive.css
@@ -35,7 +35,12 @@
 
 .step-five__additional-info-form-group {
   display: flex;
-  align-items: center; }
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem; }
+
+.step-five__additional-info-input {
+  width: 150px; }
 
 .step-five__step-five-footer {
   display: flex;
@@ -51,7 +56,7 @@
     grid-column-gap: 1.5rem; }
 
   .step-five__additional-info {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 1.5rem; } }
+    grid-template-columns: 1fr 1.5fr 1fr;
+    grid-column-gap: 2.5rem; } }
 
 /*# sourceMappingURL=StepFive.css.map */
