--- a/src/css/main.css
+++ b/src/css/main.css
@@ -878,9 +878,7 @@ html {
 
 .step-six__inner-container {
   padding: 1.6rem;
-  background-color: var(--color-white);
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px; }
+  background-color: var(--color-white); }
 
 .step-six__step-six-header {
   display: flex;
@@ -925,7 +923,10 @@ html {
   .step-six__step-six-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 2rem; } }
+    grid-gap: 2rem; }
+
+  .step-six__inner-container {
+    border-radius: 6px; } }
 .reservation-form__step-seven {
   display: flex;
   flex-direction: column;
@@ -940,7 +941,8 @@ html {
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-seven__thank-you-text {
-  font-size: var(--font-32); }
+  font-size: var(--font-32);
+  margin-bottom: 2rem; }
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-seven {
