--- a/src/css/reservation-form/StepSeven.css
+++ b/src/css/reservation-form/StepSeven.css
@@ -12,7 +12,8 @@
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-seven__thank-you-text {
-  font-size: var(--font-32); }
+  font-size: var(--font-32);
+  margin-bottom: 2rem; }
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-seven {
