--- a/src/css/reservation-form/StepSeven.scss
+++ b/src/css/reservation-form/StepSeven.scss
@@ -17,6 +17,7 @@
 
 .step-seven__thank-you-text {
     font-size: var(--font-32);
+    margin-bottom: 2rem;
 }
 
 @media only screen and (min-width: 768px) {
