--- a/src/css/reservation-form/StepSix.scss
+++ b/src/css/reservation-form/StepSix.scss
@@ -6,8 +6,6 @@
 .step-six__inner-container {
     padding: 1.6rem;
     background-color: var(--color-white);
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
 }
 
 .step-six__step-six-header {
@@ -65,5 +63,9 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 2rem;
+    }
+
+    .step-six__inner-container {
+        border-radius: 6px;
     }
 }
