--- a/src/css/reservation-form/StepOne.css
+++ b/src/css/reservation-form/StepOne.css
@@ -62,8 +62,7 @@
 
 @media only screen and (min-width: 400px) {
   .reservation-form__submit-btn {
-    padding: 1.6rem 2rem;
-    margin-top: 2rem; }
+    padding: 1.6rem 2rem; }
 
   .reservation-form__submit-btn--no-margin {
     margin-top: 0; }
