--- a/src/css/reservation-form/StepSix.css
+++ b/src/css/reservation-form/StepSix.css
@@ -32,7 +32,8 @@
   font-weight: bold; }
 
 .step-six__step-six-comments-container {
-  font-size: var(--font-1-6); }
+  font-size: var(--font-1-6);
+  margin-bottom: 1rem; }
 
 .step-six-comments-container__title {
   color: var(--color-input-label); }
