--- a/src/css/reservation-form/StepSix.scss
+++ b/src/css/reservation-form/StepSix.scss
@@ -42,6 +42,7 @@
 
 .step-six__step-six-comments-container {
     font-size: var(--font-1-6);
+    margin-bottom: 1rem;
 }
 
 .step-six-comments-container__title {
