--- a/src/css/reservation-form/StepTwo.css
+++ b/src/css/reservation-form/StepTwo.css
@@ -20,7 +20,8 @@
 
 .step-two__trip-cost-container {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  margin-bottom: 1rem; }
 
 .step-two__info {
   font-size: var(--font-2);
