--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -1,6 +1,7 @@
 .reservation-form__step-three {
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
+    display: grid;
     background-color: var(--color-white);
 }
 
@@ -81,7 +82,8 @@
 
 @media only screen and (min-width: 768px) {
     .reservation-form__step-three {
-        flex-direction: row;
+        // flex-direction: row;
+        grid-template-columns: 1fr 1fr;
         border-radius: 6px;
     }
 
