--- a/src/css/reservation-form/StepTwo.css
+++ b/src/css/reservation-form/StepTwo.css
@@ -1,6 +1,5 @@
 .reservation-form__step-two {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   background-color: var(--color-white); }
 
 .step-two__form {
@@ -35,7 +34,7 @@
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-two {
-    flex-direction: row;
+    grid-template-columns: 1fr 1fr;
     border-radius: 6px; } }
 
 /*# sourceMappingURL=StepTwo.css.map */
