--- a/src/css/main.css
+++ b/src/css/main.css
@@ -270,7 +270,7 @@ html {
   color: var(--color-black); }
 
 .welcome-content-container__reduced-prices {
-  font-size: var(--font-1-3);
+  font-size: var(--font-1-6);
   margin-top: 2rem; }
 
 .welcome-content-container__map-container {
@@ -1081,7 +1081,7 @@ html {
 .top {
   height: 265px;
   width: 100%;
-  background-image: url("../images/bg-mobile.png");
+  background-image: url("../images/bg.jpg");
   background-position: center;
   /* Center the image */
   background-repeat: no-repeat;
@@ -1090,8 +1090,7 @@ html {
 
 @media only screen and (min-width: 768px) {
   .top {
-    height: 60vh;
-    background-image: url("../images/bg.jpg"); } }
+    height: 60vh; } }
 .reservation-form {
   display: grid;
   grid-template-columns: 1fr;
