--- a/src/css/components/ReservationForm.scss
+++ b/src/css/components/ReservationForm.scss
@@ -1,28 +1,21 @@
 .reservation-form {
     display: grid;
     grid-template-columns: 1fr;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: flex-start;
     width: 100%;
     max-width: 1280px;
+    margin-top: 8rem;
 }
 
 .step-one__car-photo-container {
     display: none;
-    // width: 500px;
-    // margin-left: 50px;
 }
 
 @media only screen and (min-width: 1024px) {
     .reservation-form {
         position: absolute;
         top: 25vh;
-        // grid-template-columns: 1fr 1.5fr;
-        // grid-gap: 50px;
-        // // flex-direction: row;
-        // // justify-content: space-between;
         width: 67%;
+        margin-top: 0;
     }
 
     .step-one__car-photo-container {
