--- a/src/css/reservation-form/StepFive.css
+++ b/src/css/reservation-form/StepFive.css
@@ -45,7 +45,8 @@
 
 .step-five__additional-info-input {
   min-width: 10rem;
-  max-width: 15rem; }
+  max-width: 15rem;
+  -webkit-appearance: none; }
 
 .step-five__step-five-footer {
   display: flex;
