--- a/src/css/main.css
+++ b/src/css/main.css
@@ -569,6 +569,15 @@ html {
 .reservation-form__input-label--no-margin {
   margin-bottom: 0; }
 
+.reservation-footer-price-container__total {
+  font-size: var(--font-2-2); }
+
+.reservation-footer-price-container__dollar {
+  font-size: var(--font-2); }
+
+.reservation-footer-price-container__price {
+  font-size: var(--font-2-6); }
+
 .reservation-form__step-one {
   display: grid;
   grid-template-columns: 1fr;
