--- a/src/css/reservation-form/ReservationFormShared.scss
+++ b/src/css/reservation-form/ReservationFormShared.scss
@@ -7,3 +7,15 @@
 .reservation-form__input-label--no-margin {
     margin-bottom: 0;
 }
+
+.reservation-footer-price-container__total {
+    font-size: var(--font-2-2);
+}
+
+.reservation-footer-price-container__dollar {
+    font-size: var(--font-2);
+}
+
+.reservation-footer-price-container__price {
+    font-size: var(--font-2-6);
+}
