--- a/src/css/main.css
+++ b/src/css/main.css
@@ -812,8 +812,8 @@ html {
 
 .step-four__step-four-footer {
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  flex-direction: column;
+  align-items: flex-start; }
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-four {
@@ -821,7 +821,12 @@ html {
 
   .step-four__step-four-form {
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1.5rem; } }
+    grid-column-gap: 1.5rem; }
+
+  .step-four__step-four-footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; } }
 .reservation-form__step-five {
   display: grid;
   grid-template-rows: 1fr 1fr; }
@@ -874,8 +879,8 @@ html {
 
 .step-five__step-five-footer {
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  flex-direction: column;
+  align-items: flex-start; }
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-five {
@@ -887,7 +892,12 @@ html {
 
   .step-five__additional-info {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 2.5rem; } }
+    grid-column-gap: 2.5rem; }
+
+  .step-five__step-five-footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; } }
 .reservation-form__step-six {
   display: flex;
   flex-direction: column; }
@@ -930,8 +940,8 @@ html {
 
 .step-six__step-six-footer {
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  flex-direction: column;
+  align-items: flex-start; }
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-six {
@@ -943,7 +953,12 @@ html {
     grid-gap: 2rem; }
 
   .step-six__inner-container {
-    border-radius: 6px; } }
+    border-radius: 6px; }
+
+  .step-six__step-six-footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; } }
 .reservation-form__step-seven {
   display: flex;
   flex-direction: column;
