--- a/src/css/reservation-form/StepFour.css
+++ b/src/css/reservation-form/StepFour.css
@@ -42,8 +42,8 @@
 
 .step-four__step-four-footer {
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  flex-direction: column;
+  align-items: flex-start; }
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-four {
@@ -51,6 +51,11 @@
 
   .step-four__step-four-form {
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1.5rem; } }
+    grid-column-gap: 1.5rem; }
+
+  .step-four__step-four-footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; } }
 
 /*# sourceMappingURL=StepFour.css.map */
