--- a/src/css/reservation-form/StepSix.css
+++ b/src/css/reservation-form/StepSix.css
@@ -40,8 +40,8 @@
 
 .step-six__step-six-footer {
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  flex-direction: column;
+  align-items: flex-start; }
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-six {
@@ -53,6 +53,11 @@
     grid-gap: 2rem; }
 
   .step-six__inner-container {
-    border-radius: 6px; } }
+    border-radius: 6px; }
+
+  .step-six__step-six-footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; } }
 
 /*# sourceMappingURL=StepSix.css.map */
