--- a/src/css/reservation-form/StepSix.scss
+++ b/src/css/reservation-form/StepSix.scss
@@ -51,8 +51,8 @@
 
 .step-six__step-six-footer {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 @media only screen and (min-width: 768px) {
@@ -68,5 +68,11 @@
 
     .step-six__inner-container {
         border-radius: 6px;
+    }
+
+    .step-six__step-six-footer {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
 }
