--- a/src/css/reservation-form/StepOne.scss
+++ b/src/css/reservation-form/StepOne.scss
@@ -102,11 +102,11 @@
 }
 
 @media only screen and (min-width: 768px) {
-    .reservation-form {
-        width: 100%;
-        max-width: 534px;
-        padding: 2.5rem;
-    }
+    // .reservation-form {
+    //     width: 100%;
+    //     max-width: 534px;
+    //     padding: 2.5rem;
+    // }
 
     .reservation-form__triangle {
         display: block;
