--- a/src/css/components/ReservationForm.css
+++ b/src/css/components/ReservationForm.css
@@ -10,10 +10,9 @@
 
 @media only screen and (min-width: 1024px) {
   .reservation-form {
-    position: absolute;
-    top: 25vh;
     width: 67%;
-    margin-top: 0; }
+    max-width: 1280px;
+    margin-top: 17rem; }
 
   .step-one__car-photo-container {
     display: block;
