Add app.scss file where the markup of the App.js is stored.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'components';
 @import 'placeholders';
+@import 'app';
 @import 'pages/Home';
 @import 'pages/AboutUs';
 @import 'pages/Reservation';
