--- a/src/css/main.css
+++ b/src/css/main.css
@@ -215,6 +215,25 @@ html {
 .mb-45 {
   margin-bottom: 45px; }
 
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.mobile {
+  display: flex;
+  flex-direction: column; }
+
+.desktop {
+  display: none; }
+
+@media only screen and (min-width: 768px) {
+  .mobile {
+    display: none; }
+
+  .desktop {
+    display: flex;
+    flex-direction: column; } }
 .home {
   position: relative;
   width: 100%;
